@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+05-Nov-2010 Christophe Demko
+ $ Storing the default style name without ** when language debug is on while installing template
+
 05-Nov-2010 Jean-Marie Simonet
  # [#21798] Saving Profile Plugin configuration disables Profile, Thanks Mathavan and Elin.
  
